--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -47,7 +47,7 @@ jobs:
         run: |
           vertag=(${GITHUB_REF//\// })
           VERSION="${vertag[2]}"
-          VERSION="${VERSION//v}"
+          [[ "${VERSION:0:1}" == "v" ]] && VERSION="${VERSION:1}"
           dotnet pack -c Release --include-symbols --include-source -p:PackageVersion=$VERSION -o nupkg
       - name: Push to NuGet.org
         run: dotnet nuget push ./nupkg/*.nupkg --source https://api.nuget.org/v3/index.json --skip-duplicate --api-key ${{secrets.NUGET_API_KEY}}
