--- a/.github/workflows/dotnet-codeql.yml
+++ b/.github/workflows/dotnet-codeql.yml
@@ -3,10 +3,10 @@ name: ".NET CodeQL"
 on:
   push:
     branches:
-    - master
+    - main
   pull_request:
     branches:
-    - master
+    - main
     paths:
     - .github/workflows/dotnet-codeql.yml
 
