--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,7 +28,7 @@ jobs:
       run: dotnet test --no-restore --logger "console;verbosity=normal"
     - name: Pack
       # Make sure pack works
-      run: dotnet pack --no-build -c Release --include-symbols --include-source -p:PackageVersion=0.0.1
+      run: dotnet pack --no-build -c Release --include-symbols --include-source
 
   deploy:
     needs: build
