--- a/sample/PersonConsole/PersonConsole.csproj
+++ b/sample/PersonConsole/PersonConsole.csproj
@@ -2,9 +2,10 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>$(SampleTargetFramework)</TargetFramework>
     <Nullable>enable</Nullable>
 	<ImplicitUsing>enable</ImplicitUsing>
+	<IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
