--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,18 +31,11 @@ jobs:
     - name: Test
       run: dotnet test --no-restore --logger "console;verbosity=normal"
 
-    - name: Pack
+    - name: Pack and push to nuget.org
+      if: github.event_name == 'release'
       run: |
         vertag=(${GITHUB_REF//\// })
         VERSION="${vertag[2]}"
-        [[ "${VERSION:0:1}" == "v" ]] && VERSION="${VERSION:1}"
-        echo v=$VERSION
-        [ ! "$VERSION" ] && VERSION="0.1.0" # This should not happen if release
-        echo V=$VERSION
-        dotnet pack --no-build -c Release --include-symbols --include-source -p:PackageVersion=$VERSION -o nupkg
-
-    - name: Push to nuget.org
-      if: github.event_name == 'release'
-      run: |
-        [ "$VERSION" == "0.1.0" ] && (echo "Incorrect version! ($VERSION)" && exit 1)
+        [[ "${VERSION:0:1}" == "v" ]] && VERSION="${VERSION:1}" # Remove leading v
+        dotnet pack --no-build -c Release --include-symbols --include-source -p:PackageVersion="$VERSION" -o nupkg
         dotnet nuget push ./nupkg/*.nupkg --source https://api.nuget.org/v3/index.json --skip-duplicate --api-key ${{secrets.NUGET_API_KEY}}
