--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,14 +31,16 @@ jobs:
     - name: Test
       run: dotnet test --no-restore --logger "console;verbosity=normal"
 
-    - name: Debug
-      run: echo G=${GITHUB_REF}
+    - name: Pack (non-release)
+      if: github.event_name != 'release'
+      run: dotnet pack -c Release --include-symbols --include-source
 
-    - name: Pack and push to nuget.org
+    - name: Pack and push to nuget.org (release)
       if: github.event_name == 'release'
       run: |
         vertag=(${GITHUB_REF//\// })
         VERSION="${vertag[2]}"
-        [[ "${VERSION:0:1}" == "v" ]] && VERSION="${VERSION:1}" # Remove leading v
+        [[ "${VERSION:0:1}" == "v" ]] && VERSION="${VERSION:1}"
+        [[ "$VERSION" =~ ^[1-9][0-9]*\.[0-9]+\.[0-9]+(-[a-z0-9]+\.[0-9]+|)$ ]] || (echo "Incorrect version! ($VERSION)"; exit 1)
         dotnet pack -c Release --include-symbols --include-source -p:PackageVersion="$VERSION" -o nupkg
         dotnet nuget push ./nupkg/*.nupkg --source https://api.nuget.org/v3/index.json --skip-duplicate --api-key ${{secrets.NUGET_API_KEY}}
