Do not include sourcses and symbols in nupkg

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -33,7 +33,7 @@ jobs:
 
     - name: Pack (non-release)
       if: github.event_name != 'release'
-      run: dotnet pack -c Release --include-symbols --include-source
+      run: dotnet pack -c Release
 
     - name: Pack and push to nuget.org (release)
       if: github.event_name == 'release'
@@ -42,5 +42,5 @@ jobs:
         VERSION="${vertag[2]}"
         [[ "${VERSION:0:1}" == "v" ]] && VERSION="${VERSION:1}"
         [[ "$VERSION" =~ ^[1-9][0-9]*\.[0-9]+\.[0-9]+(-[a-z0-9]+\.[0-9]+|)$ ]] || (echo "Incorrect version! ($VERSION)"; exit 1)
-        dotnet pack -c Release --include-symbols --include-source -p:PackageVersion="$VERSION" -o nupkg
+        dotnet pack -c Release -p:PackageVersion="$VERSION" -o nupkg
         dotnet nuget push ./nupkg/*.nupkg --source https://api.nuget.org/v3/index.json --skip-duplicate --api-key ${{secrets.NUGET_API_KEY}}
