--- a/sample/WeatherForecastWebApi/WeatherForecastWebApi.csproj
+++ b/sample/WeatherForecastWebApi/WeatherForecastWebApi.csproj
@@ -1,5 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>$(SampleTargetFramework)</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
