--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,8 +1,12 @@
 <Project>
   <PropertyGroup Label="Frameworks">
     <ClassLibTargetFrameworks>netstandard2.0;net7.0</ClassLibTargetFrameworks>
-    <TestTargetFrameworks>net6.0;net7.0</TestTargetFrameworks>
+    <TestTargetFrameworks>netcoreapp3.1;net5.0;net6.0;net7.0</TestTargetFrameworks>
     <SampleTargetFramework>net7.0</SampleTargetFramework>
+
+    <!-- Unit tests are running against EOL SDKs as well. DIsable all warnings related to EOL SDK -->
+    <CheckEolTargetFramework>false</CheckEolTargetFramework>
+    <SuppressTfmSupportBuildWarnings>true</SuppressTfmSupportBuildWarnings>
   </PropertyGroup>
 
   <PropertyGroup Label="Versions">
