--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -4,7 +4,7 @@
     <TestTargetFrameworks>netcoreapp3.1;net5.0;net6.0;net7.0</TestTargetFrameworks>
     <SampleTargetFramework>net7.0</SampleTargetFramework>
 
-    <!-- Unit tests are running against EOL SDKs as well. DIsable all warnings related to EOL SDK -->
+    <!-- Unit tests are running against EOL SDKs as well. Disable all warnings related to EOL SDK -->
     <CheckEolTargetFramework>false</CheckEolTargetFramework>
     <SuppressTfmSupportBuildWarnings>true</SuppressTfmSupportBuildWarnings>
   </PropertyGroup>
