Add .NET 8.0 testing

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -6,7 +6,7 @@
   <!-- Run "dotnet list package (dash,dash)outdated" to see the latest versions of each package.-->
 	
   <ItemGroup Label="Package Dependencies">
-    <PackageVersion Include="System.Text.Json" Version="7.0.3" />
+    <PackageVersion Include="System.Text.Json" Version="7.0.3" Condition="'$(TargetFramework)' != 'netcoreapp3.1' OR '$(TargetFramework)'== 'net5.0' OR '$(TargetFramework)' != 'net6.0'"/>
   </ItemGroup>
 
   <ItemGroup Label="Build Dependencies">
