--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,8 +1,8 @@
 <Project>
   <PropertyGroup Label="Frameworks">
-    <ClassLibTargetFrameworks>netstandard2.0;net7.0;net8.0</ClassLibTargetFrameworks>
-    <TestTargetFrameworks>net6.0;net7.0;net8.0</TestTargetFrameworks>
-    <SampleTargetFramework>net8.0</SampleTargetFramework>
+    <ClassLibTargetFrameworks>netstandard2.0;net7.0;net8.0;net9.0</ClassLibTargetFrameworks>
+    <TestTargetFrameworks>net6.0;net7.0;net8.0;net9.0</TestTargetFrameworks>
+    <SampleTargetFramework>net9.0</SampleTargetFramework>
 
     <!-- Unit tests are running against EOL SDKs as well. Disable all warnings related to EOL SDK -->
     <CheckEolTargetFramework>false</CheckEolTargetFramework>
