--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,6 +21,8 @@ jobs:
           6.0.x
           7.0.x
           8.0.x
+          9.0.x
+        dotnet-quality: 'preview'
 
     - name: Install dependencies
       run: dotnet restore
