--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -5,7 +5,7 @@
   <!-- Run "dotnet list package (dash,dash)outdated" to see the latest versions of each package.-->
   <ItemGroup Label="Dependencies">
     <PackageVersion Include="System.ComponentModel.Annotations" Version="5.0.0" Condition="$(TargetFramework.StartsWith('netstandard'))" />
-    <PackageVersion Include="System.Text.Json" Version="8.0.5" Condition="$(TargetFramework.StartsWith('netstandard'))" />
+    <PackageVersion Include="System.Text.Json" Version="9.0.0-rc.2.24473.5" Condition="$(TargetFramework.StartsWith('netstandard'))" />
   </ItemGroup>
   <ItemGroup Label="Build Dependencies">
     <PackageVersion Include="coverlet.collector" Version="6.0.2" />
